# db-test

./: .env  .gitignore  Cargo.toml  README.md  entrypoint.sh  requirements.txt
.config/: hakari.toml
.github/workflows/: build.yml
bulk_loader/: Cargo.toml
bulk_loader/src/: config.rs  infrastructure.rs  main.rs
bulk_loader/src/application/: ports.rs  service.rs
bulk_loader/src/infrastructure/: generator.rs  sorter.rs
config/: secrets.example.toml  settings.toml
crates/compare/: Cargo.toml
crates/compare/migrations/: 0001_schema.sql
crates/compare/src/: backends.rs  docker.rs  lib.rs
crates/compare/src/backends/: redis.rs  sqlite.rs
crates/compare/src/backends/postgres/: insert_bulk.rs
crates/compare/src/backends/redis/: insert_bulk.rs
crates/compare/src/backends/sqlite/: insert_bulk.rs
crates/config/: Cargo.toml  _build.rs  bench-dev-config.toml
crates/config/src/: lib.rs  serde_duration.rs
crates/hack/: Cargo.toml
crates/model/: Cargo.toml  build.rs
crates/model/src/: bulk_data.rs  lib.rs  temp.rs
crates/stand/: Cargo.toml  build.rs
crates/stand/benches/: insert_bulk.rs
crates/tools/: Cargo.toml
data_preloader/: __main__.py  settings.py
data_preloader/application/: domain.py  exceptions.py  service.py
data_preloader/infrastructure/: api_client.py  api_models.py  base_client.py  containers.py  decorators.py  downloader.py  processing.py
postgres/insert-bulk/: docker.sh  run.sh
postgresql/: docker.sh
postgresql/insert-bulk/: benchmark.sh  docker.sh  run.sh
postgresql/insert-bulk/results/: droplet.json
postgresql/select-page/: benchmark.sh  run.sh
redis/: docker.sh  run.sh
redis/insert-bulk/: benchmark.sh  docker.sh  run.sh
redis/insert-bulk/results/: droplet.json
redis/results/: droplet.json
redis/select-page/: benchmark.sh  run.sh
scripts/: bench
src/: adapters.rs  bench.rs  bustle.rs  main.rs  model.rs  workloads.rs
src/adapters/: mdbx.rs  rocksdb.rs
