[package]
name = "db-test-lite"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
csv = "1.2.2"
num_cpus = "1.16.0"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0.185", features = ["derive"] }
scopeguard = "1"
structopt = "0.3.26"
tempfile = "3.20.0"
tracing = { version = "0.1", features = ["std", "attributes"], default-features = false }
tracing-subscriber = "0.3.17"

libmdbx = "0.5.4"
rocksdb = "0.23.0"
