[workspace]
resolver = "3"
members = [
    "bulk_loader",
    # "benchmark",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"

clap = { version = "4.5", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.9.4"
serde = { version = "1.0", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rocksdb = "0.23.0"
