[package]
name = "bulk_loader"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true

clap.workspace = true
figment.workspace = true
project-root = "0.2.2"
serde.workspace = true
toml.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

rocksdb.workspace = true

parquet = { version = "55.2.0", features = ["arrow"] }

rayon = "1.10"
