[package]
name = "bulk_loader"
version.workspace = true
edition.workspace = true

[dependencies]

# --- Core Application ---

anyhow = "1.0.98"
clap = { version = "4.5.42", default-features = false, features = [
    "derive",
    "std",
    "help",
] }
figment = { version = "0.10.19", default-features = false, features = ["toml"] }
futures = { version = "0.3.31", default-features = false, features = [
    "executor",
] }
project-root = "0.2.2"
serde = { version = "1.0.219", features = ["derive"] }

tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "env-filter",
    "fmt",
] }

# --- Data & DB Layer ---

parquet = { version = "55.2.0", default-features = false, features = ["arrow"] }

datafusion = { version = "49.0.0", default-features = false, features = [
    "parquet",
] }

rocksdb = { version = "0.23.0", default-features = false }
