[package]
name = "db-test-stand"
version.workspace = true
edition.workspace = true

[lib]
bench = false

[[bench]]
name = "insert_bulk"
harness = false

[dependencies]
hack.workspace = true

[dev-dependencies]
db-test-compare.workspace = true
db-test-model.workspace = true
db-test-config.workspace = true

const_format.workspace = true

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports", "async_tokio"]

[build-dependencies]
db-test-model.workspace = true
db-test-config.workspace = true

anyhow.workspace = true
